<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".Exercises3">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/msg"
            android:paddingBottom="23sp"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ex3_image1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/icon_blacksend_touch" />

        <ImageView
            android:id="@+id/ex3_image2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/icon_blacksend_touch" />

        <ImageView
            android:id="@+id/ex3_image3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/icon_blacksend_touch" />

        <ImageView
            android:id="@+id/ex3_image4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/icon_blacksend_touch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ex3_text1"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fans"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ex3_text2"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/good"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ex3_text3"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chat_me"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ex3_text4"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>


</LinearLayout>